--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> Meu Site </title>
 </head>
 <body>
-<h1>Meu Site<h1>
+Meu Site
 &lt;ul&gt;
     &lt;li&gt;&lt;a href="index.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="sobre.html"&gt;Sobre&lt;/a&gt;&lt;/li&gt;
